installed fast-levenstein library

--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
     "url": "git@github.timisakzhanov:timisakzhanov/MatchDemoJS.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "fast-levenshtein": "^2.0.6"
+  }
 }
